--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ add_executable(Uls
         cmake-build-debug/cmake_install.cmake
         cmake-build-debug/CMakeCache.txt
         cmake-build-debug/Makefile
+        cmake-build-debug/Uls
         cmake-build-debug/Uls.cbp
         inc/uls.h
         libmx/inc/libmx.h
@@ -80,6 +81,7 @@ add_executable(Uls
         src/mx_dirwalk.c
         src/mx_get_permissions.c
         src/mx_init_m_struct.c
+        src/mx_print_long.c
         CMakeLists.txt
         Makefile
         uls)
